fix link spacing on individual space

--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,7 @@ p {
     vertical-align: middle;
     border: 1rem;
 }
+
+.link {
+    padding: 1rem 0;
+}
